Fix Gap

--- a/src/components/CompanyPanel/companypanel.module.css
+++ b/src/components/CompanyPanel/companypanel.module.css
@@ -17,7 +17,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 2%;
+    gap: 10px;
     background-color: #D7F2F7;
     border-radius: 20px;
     box-sizing: border-box;
